ADD: 完善前端功能

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 <div id="app"></div>
 
 <script type="module">
-    import {createTaskTable} from '/public/js/components/taskTable.js'
+    import {createTaskTable} from '../../public/js/components/taskTable.js'
 
     const app = Vue.createApp({
         template: `
