--- a/templates/download.html
+++ b/templates/download.html
@@ -2,8 +2,8 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>下载本子</title>
-    <link rel="icon" href="/public/logo.svg" type="image/x-icon">
+    <title>下载bot酱</title>
+    <link rel="icon" href="/public/img/logo.svg" type="image/x-icon">
     <!-- Vue 3 -->
     <script src="/public/vue.global.prod.js"></script>
     <!-- Axios -->
