--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <link rel="icon" href="/public/logo.svg" type="image/x-icon">
+    <link rel="icon" href="/public/img/logo.svg" type="image/x-icon">
     <meta charset="UTF-8">
-    <title>任务队列展示</title>
+    <title>下载bot酱</title>
     <script src="/public/vue.global.prod.js"></script>
     <script src="/public/axios.min.js"></script>
     <script src="/public/naive-ui.prod.js"></script>
