--- a/templates/download.html
+++ b/templates/download.html
@@ -11,17 +11,37 @@
     <!-- Naive UI -->
     <script src="/public/naive-ui.prod.js"></script>
     <style>
-        body {
+        html, body {
             font-family: Arial;
             background: #f5f5f5;
             margin: 0;
             padding: 0;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+
+
+        #app {
+            flex: 1; /* 占据剩余空间，把 footer 顶到底部 */
+        }
+
+        footer {
+            text-align: center;
+            color: #ff7eb9;
+            font-size: 14px;
+            padding: 10px 0;
         }
     </style>
 </head>
 <body>
 <div id="app"></div>
-
+<footer>
+    © 2025 <a href="https://gitee.com/kili233/jinman_pull_bot" target="_blank"
+              style="color: #ff7eb9;text-decoration: none;">下载bot酱</a><br>
+    power by <a href="https://github.com/hect0x7/JMComic-Crawler-Python" target="_blank"
+                style="color: #ff7eb9;text-decoration: none;">hect0x7/JMComic-Crawler-Python</a>
+</footer>
 <script type="module">
     import {createDownloadForm} from '/public/js/components/downloadForm.js'
 
