--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" href="/public/img/logo.svg" type="image/x-icon">
     <meta charset="UTF-8">
-    <title>下载bot酱</title>
+    <title>任务队列</title>
     <script src="/public/vue.global.prod.js"></script>
     <script src="/public/axios.min.js"></script>
     <script src="/public/naive-ui.prod.js"></script>
