--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
 <body>
 <div id="app"></div>
 <footer>
-    © 2025 <a href="https://gitee.com/kili233/jinman_pull_bot" target="_blank"
+    © 2025 <a href="https://github.com/Kiliwwwww/download_bot" target="_blank"
               style="color: #ff7eb9;text-decoration: none;">下载bot酱</a><br>
     power by <a href="https://github.com/hect0x7/JMComic-Crawler-Python" target="_blank"
                 style="color: #ff7eb9;text-decoration: none;">hect0x7/JMComic-Crawler-Python</a>
