ADD: 禁漫列表 样式+功能

--- a/templates/jm_list_page.html
+++ b/templates/jm_list_page.html
@@ -21,6 +21,18 @@
             flex-direction: column;
         }
 
+        .fade-enter-active, .fade-leave-active {
+            transition: opacity 0.3s;
+        }
+
+        .fade-enter-from, .fade-leave-to {
+            opacity: 0;
+        }
+
+        .fade-enter-to, .fade-leave-from {
+            opacity: 1;
+        }
+
 
         #app {
             flex: 1; /* 占据剩余空间，把 footer 顶到底部 */
