--- a/templates/search.html
+++ b/templates/search.html
@@ -44,7 +44,7 @@
         }
 
         .logo {
-            width: 180px;
+            height: 80px;
             margin-bottom: 40px;
             animation: logo-bounce 0.6s ease;
         }
