--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
     <script src="/public/vue.global.prod.js"></script>
     <script src="/public/axios.min.js"></script>
     <script src="/public/naive-ui.prod.js"></script>
+    <link rel="stylesheet" href="/public/css/index.css">
+
     <style>
          html, body {
             font-family: Arial;
