--- a/templates/search.html
+++ b/templates/search.html
@@ -10,6 +10,8 @@
     <script src="/public/axios.min.js"></script>
     <!-- Naive UI -->
     <script src="/public/naive-ui.prod.js"></script>
+    <link rel="stylesheet" href="/public/css/index.css">
+
     <style>
         html, body {
             font-family: Arial;
