--- a/templates/search.html
+++ b/templates/search.html
@@ -130,13 +130,15 @@
     </style>
 </head>
 <body>
-<div id="app"></div>
-<footer>
-    © 2025 <a href="https://github.com/Kiliwwwww/download_bot" target="_blank"
-              style="color: #ff7eb9;text-decoration: none;">下载bot酱</a><br>
-    power by <a href="https://github.com/hect0x7/JMComic-Crawler-Python" target="_blank"
-                style="color: #ff7eb9;text-decoration: none;">hect0x7/JMComic-Crawler-Python</a>
-</footer>
+<div class="jm-list-container">
+    <div id="app"></div>
+    <footer style="margin-top: 68px">
+        © 2025 <a href="https://github.com/Kiliwwwww/download_bot" target="_blank"
+                  style="color: #ff7eb9;text-decoration: none;">下载bot酱</a><br>
+        power by <a href="https://github.com/hect0x7/JMComic-Crawler-Python" target="_blank"
+                    style="color: #ff7eb9;text-decoration: none;">hect0x7/JMComic-Crawler-Python</a>
+    </footer>
+</div>
 <script type="module">
     import {createSearchPage} from '/public/js/components/searchPage.js'
     import {themeOverrides} from '/public/js/utils/theme.js'
