--- a/templates/download.html
+++ b/templates/download.html
@@ -61,15 +61,13 @@
     </style>
 </head>
 <body>
-<div class="jm-list-container">
-    <div id="app"></div>
-    <footer>
-        © 2025 <a href="https://github.com/Kiliwwwww/download_bot" target="_blank"
-                  style="color: #ff7eb9;text-decoration: none;">下载bot酱</a><br>
-        power by <a href="https://github.com/hect0x7/JMComic-Crawler-Python" target="_blank"
-                    style="color: #ff7eb9;text-decoration: none;">hect0x7/JMComic-Crawler-Python</a>
-    </footer>
-</div>
+<div id="app" class="jm-list-container"></div>
+<footer class="jm-list-container">
+    © 2025 <a href="https://github.com/Kiliwwwww/download_bot" target="_blank"
+              style="color: #ff7eb9;text-decoration: none;">下载bot酱</a><br>
+    power by <a href="https://github.com/hect0x7/JMComic-Crawler-Python" target="_blank"
+                style="color: #ff7eb9;text-decoration: none;">hect0x7/JMComic-Crawler-Python</a>
+</footer>
 <script type="module">
     import {createDownloadForm} from '/public/js/components/downloadForm.js'
    import {themeOverrides} from '/public/js/utils/theme.js'
